# ai-connector-builder

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_ISSUE.md  README.md  main.py  playwright.config.py  pyproject.toml  requirements.txt  rxconfig.py
.devcontainer/: CODESPACES.md  devcontainer.json
.github/workflows/: ci.yml
agentic_connector_builder_webapp/: agentic_connector_builder_webapp.py  chat_agent.py  cli.py
agentic_connector_builder_webapp/components/: __init__.py  yaml_editor.py
agentic_connector_builder_webapp/tabs/: progress_tab.py
app/: app.py
app/components/: chat_sidebar.py
app/tabs/: __init__.py  code_tab.py  requirements_tab.py  save_publish_tab.py
tests/: __init__.py  conftest.py  test_app.py  test_manifest_editing.py
tests/e2e/: __init__.py  conftest.py  test_yaml_editor.py
